@@ -20,6 +20,7 @@ import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
+import java.net.URI;
 import java.net.URL;
 import java.util.Enumeration;
 import java.util.zip.ZipEntry;
@@ -71,7 +72,7 @@ public class GeonamesFileDownloader {
 
   public static String fileUrl(String fAddress, String localFileName, String destDir) {
     String filename = destDir + "\\" + localFileName;
-    try (InputStream is = new URL(fAddress).openConnection().getInputStream();
+    try (InputStream is = new URI(fAddress).toURL().openConnection().getInputStream();
          OutputStream outStream = new BufferedOutputStream(new FileOutputStream(destDir + "\\" + localFileName))) {
 
       byte[] buf = new byte[size];
